<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/activity_padding"
    android:layout_height="wrap_content">

    <!--First name input-->
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/input_user_fn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_fn"
            android:hint="@string/first_name_lbl"
            style="@style/text_inputs_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Last name input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_user_ln"
        app:layout_constraintTop_toBottomOf="@id/input_user_fn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_ln"
            android:hint="@string/last_name_lbl"
            style="@style/text_inputs_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Email input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_user_email"
        app:layout_constraintTop_toBottomOf="@id/input_user_ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_email"
            android:hint="@string/email_opt_lbl"
            style="@style/text_inputs_style"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        app:layout_constraintTop_toBottomOf="@id/input_user_email"
        android:id="@+id/bt_login_final"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/confirm_lbl"
        style="@style/AppButtons_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>