<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:padding="@dimen/activity_padding">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/margin_tiny"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@id/tv_verify_dwntime"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/phone_valid_intro"
            android:textAlignment="center" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_verify_dwntime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_tiny"
        android:text="@string/resend_code_in"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/linear_verify_codes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/linear_verify_codes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--input code 1-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/verify_code_dim"
            android:layout_height="@dimen/verify_code_dim"
            android:layout_marginStart="@dimen/margin_tiny"
            android:background="@drawable/rounded_dark_border"
            android:padding="@dimen/margin_tiny"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_code_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--input code 2-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/verify_code_dim"
            android:layout_height="@dimen/verify_code_dim"
            android:layout_marginStart="@dimen/margin_tiny"
            android:background="@drawable/rounded_dark_border"
            android:padding="@dimen/margin_tiny"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_code_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--input code 3-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/verify_code_dim"
            android:layout_height="@dimen/verify_code_dim"
            android:layout_marginStart="@dimen/margin_tiny"
            android:background="@drawable/rounded_dark_border"
            android:padding="@dimen/margin_tiny"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_code_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--input code 4-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/verify_code_dim"
            android:layout_height="@dimen/verify_code_dim"
            android:layout_marginStart="@dimen/margin_tiny"
            android:background="@drawable/rounded_dark_border"
            android:padding="@dimen/margin_tiny"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_code_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--input code 5-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/verify_code_dim"
            android:layout_height="@dimen/verify_code_dim"
            android:layout_marginStart="@dimen/margin_tiny"
            android:background="@drawable/rounded_dark_border"
            android:padding="@dimen/margin_tiny"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_code_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--input code 6-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/verify_code_dim"
            android:layout_height="@dimen/verify_code_dim"
            android:layout_marginStart="@dimen/margin_tiny"
            android:background="@drawable/rounded_dark_border"
            android:padding="@dimen/margin_tiny"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_code_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_verify_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/verifying"
        android:textSize="@dimen/med_text"
        android:textStyle="italic|bold"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/probar_verify_code" />

    <ProgressBar
        android:id="@+id/probar_verify_code"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/linear_verify_codes" />

    <Button
        android:id="@+id/bt_frag_verifycode"
        style="@style/AppButtons_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:drawableStart="@drawable/ic_arrow_forward_white_24dp"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_tiny"
        android:text="@string/verify"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/probar_verify_code" />

    <TextView
        android:id="@+id/tv_verify_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:clickable="true"
        android:enabled="false"
        android:focusable="true"
        android:text="@string/resend_code"
        android:textAlignment="center"
        android:textSize="@dimen/med_text"
        app:layout_constraintTop_toBottomOf="@id/bt_frag_verifycode" />

</androidx.constraintlayout.widget.ConstraintLayout>